Mon Sep 24 13:44:04 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* src/dbspec.py: Add "import xappy" line, and make database
	  directory (and parents) if it doesn't already exist.
	* ChangeLog: Update.

Mon Sep 24 10:12:10 UTC 2007  Paul Rudin <paul@rudin.co.uk>

	* src/util.py,src/w32com_ifilter.py: Split gen_until_exception out
	  into util. Changed it to take an iterator (it's more useful that
	  way).

	  Added code to deal with structured storage, again based on the
	  w32com filter demo, and emmited blocks for fields for summary
	  information based where it's available.

Sun Sep 23 05:59:16 UTC 2007  Paul Rudin <paul@rudin.co.uk>

	* src/dbspec.py,src/doc_collection.py,src/indexspec.py,
	  src/w32com_ifilter.py: Renaming for better correspondence between
	  name and purpose.

Sun Sep 23 05:58:18 UTC 2007  Paul Rudin <paul@rudin.co.uk>

	* src/indexer.py: Split a line for better readability.

Sat Sep 22 05:37:24 UTC 2007  Paul Rudin <paul@rudin.co.uk>

	* src/w32com_ifilter.py: Added a call to pythoncom.CoInitialize so
	  that the filter can run happily in any thread.

Thu Sep 20 12:01:58 UTC 2007  Paul Rudin <paul@rudin.co.uk>

	* src/cpserver.py,src/filespec.py,
	  src/templates/collection_detail.html,src/templates.py,
	  src/util.py: Getting the date/time related parts of a filespec to
	  function, and provided for setting them through the UI.

Wed Sep 19 08:26:20 UTC 2007  Paul Rudin <paul@rudin.co.uk>

	* src/templates/collection_detail.html: commented out the yui stuff
	  as it's not currently used.

Wed Sep 19 07:40:31 UTC 2007  Paul Rudin <paul@rudin.co.uk>

	* src/: Refactored to (hopefully) de-spaghetti a bit.

	  Made a start on indexing options for collections.

Tue Sep 18 13:05:31 UTC 2007  Paul Rudin <paul@rudin.co.uk>

	* src/indexer.py: Addd some docstrings; renamed methods to make
	  intended public interface clear; renamed a method param to be
	  consistent with invocation.
