@@ -1,3 +1,9 @@
+Wed Sep 26 15:03:11 BST 2007  Tom Mortimer <tom@lemurconsulting.com>
+
+    * src/flax_collections.py: added collection_names property
+    * src/cpserver.py: search method now treats col = None as "search all"
+    * src/templates.py: template handles col = None
+
 Mon Sep 24 13:44:04 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* src/dbspec.py: Add "import xappy" line, and make database
